mobile responsiveness tweaks, making formatting more consistent, fixed header on mobile

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -425,7 +425,7 @@ footer article h4{
 	color: #272822;
 }
 
-.greenjumbo hr {
+.greyjumbo hr {
 	color: white;
 }
 
@@ -587,9 +587,13 @@ hr {
     margin-bottom: 0.5em;
     margin-left: auto;
     margin-right: auto;
-    border-style: groove;
+    border-style: solid;
     border-width: 1px;
-    border-color: #E7E7E7;
+    border-color: #E5E5E5;
+}
+
+.greyjumbo hr {
+	border-color: RGBA(60, 61, 57, 1);
 }
 
 hr.short {
@@ -680,6 +684,7 @@ nav.navbar-fixed-top {
 .header_logo {
 	height: 50px ;
 }
+
 
 
 #large_green_circle {
@@ -974,6 +979,22 @@ h2.lower_header {
         padding: 0px
     }
 
+ legend {
+ 	color: RGBA(60, 61, 57, 1);
+ 	text-transform: uppercase;
+ 	font-weight: 300;
+ 	/*text-align: center;*/
+ }
+
+ .step_title {
+ 	color: RGBA(60, 61, 57, 1);
+ 	font-weight: 200;
+ }
+
+ h2.step {
+ 	color: RGBA(60, 61, 57, 1);
+ }
+
 /* ---------------------------------------------------------
 	3. Custom form styles
    ---------------------------------------------------------*/
@@ -1164,13 +1185,13 @@ h2.lower_header {
 	.navbar-toggle .icon-bar + .icon-bar{margin-top: 2px;}
 	.navbar-collapse{
 		position: absolute;
-		top: 21px;
+		/*top: 21px;*/
 		right: 2px;
 		width: 240px;
 		border:none;
 		z-index: 2;
 		padding: 10px;
-		background: #14AB58;
+		background: RGBA(20, 171, 88, .8);
 	}
 
 	.navbar-nav>li>a {
@@ -1210,8 +1231,8 @@ h2.lower_header {
 		width: 20px;
 		background-position: -156px -557px;
 	}
-	.banner {height: 393px;}
-	.add .banner{height: 300px;}
+	.banner {height: 250px;}
+	.add .banner{height:  250pxpx;}
 	.banner header{padding-bottom: 38px;}
 	.banner h1{
 		font-size: 35px;
@@ -1252,9 +1273,7 @@ h2.lower_header {
 		min-width: 55px;
 		padding: 4px 12px 6px;
 	}
-	#content{
-		padding: 0 16px 14px;
-	}
+
 	.video-btn{margin-bottom: 27px; max-width: 500px;}
 	.video-btn.active{max-width: 288px;}
 	.add .video-btn{margin-bottom: 34px;}
@@ -1384,11 +1403,15 @@ h2.lower_header {
 	}
 	.footer-nav li + li:before{padding: 0 3px;}
 	#footer .copyright{
-		font-size: 8px;
+		font-size: 12px;
 		float: none;
 		display: block;
 		text-align: center;
 		width: auto;
+		font-weight: 100;
+	}
+	.footer img {
+		width: 150px;
 	}
 	.features{padding-bottom: 4px;}
 	.features article{
@@ -1397,7 +1420,7 @@ h2.lower_header {
 		line-height: 16px;
 	}
 	.features img{
-		width: 181px;
+		width: 100px;
 		margin-bottom: 18px;
 	}
 	.features h2{
@@ -1405,18 +1428,22 @@ h2.lower_header {
 		line-height: 24px;
 		margin-bottom: 8px;
 	}
+	.features h4 {
+		font-size: 16px;
+		line-height: 19px
+	}
 	#content .jumbotron{
 		padding: 29px 24px 1px;
-		margin: 0 -16px 27px;
-		min-height: 171px;
+		margin: 0 -16px 0px;
+		/*min-height: 171px;*/
 	}
-	.jumbotron h1 {font-size: 28px;}
+	.jumbotron h1 {font-size: 40px;}
 	.jumbotron h2{
 		font-size: 20px;
 		line-height: 22px;
 	}
 	.jumbotron p{
-		line-height: 17px;
+		line-height: 22px;
 		margin-bottom: 26px;
 	}
 	.jumbotron br{display: none;}
@@ -1425,20 +1452,26 @@ h2.lower_header {
 		padding: 9px 11px 11px;
 		height: 36px;
 	}
+	
+	div.text-center {
+		height: 250;
+	}
 
 	#large_green_circle {
-	background-color: RGBA(20, 171, 88, .6);
-	width: 100%;
-	border-radius: 0%;
-	margin: auto;
-	/*vertical-align: middle;*/
+		background-color: RGBA(20, 171, 88, .6);
+		width: 100%;
+		border-radius: 0%;
+		margin: auto;
+		height: 250px;
 	}
+
 	h2.tagline {
 		margin-top: 0;
 	}
 
 	h1.new_header {
-		padding-top: 20%;
+		padding-top: 150px;
+		font-size: 40px
 	}
 	
 
@@ -1461,7 +1494,27 @@ h2.lower_header {
 		color:white;
 	}
 
+	.parallax {
+		padding: 50px;
+	}
+
+	h1.parallax_header {
+		color: white;
+		font-size: 40px;
+		width: 100%;
+		font-weight: 100;
+	}
 	
+	li.pop_of_red {
+		height: 20px;
+		background-color: RGBA(20, 171, 88, 0);
+	}
+
+	.hidden_mobile {
+		display: none;
+	}
+
+
 
 
 }
